--- a/introduction.tex
+++ b/introduction.tex
@@ -31,8 +31,7 @@ Given voters preferences, regardless of election system, we want to detect laten
 
 This thesis has the following structure.
 Chapter 2 presents briefly basic mathematical and computational scientific concepts and facts to be used later.
-It also introduces formal definitions of elections.
-Chapter 3 introduces decloning problem and gives polynomial-time algorithm for it.
+Chapter 3 includes formal definitions of elections, introduces decloning problem and shows polynomial-time algorithm for it.
 Chapter 4 contains study of imperfect clone structures:
 it discusses error function for clone set families and optimal non-perfect decloning problem.
 For a sample error function we prove that optimal decloning is \textit{NP}-complete.
