--- a/imperfect.tex
+++ b/imperfect.tex
@@ -195,3 +195,16 @@ There is a reduction of problem \textsc{HPMP} to \textsc{COD}.
 \begin{thm}
 \textsc{ComponentOptimalDecloning} is $NP$-complete.
 \end{thm}
+
+\begin{lmm}
+There is a clique of size $c$ in graph $G=(V,E)$ iff
+for some hamiltonian path multigraph $G=(V',E')$, $E=(V',w)$ such that $V' \supset V$ and
+$$ w(\{u,v\}) =
+\begin{cases}
+2, &\text{when} \{u,v\} \in \{1,3n\} \\
+0, &\text{when} \{u,v\} \not\in E, u,v \in V \\
+<= 1, &\text{when} u \not\in V \vee v \not\in V
+\end{cases}
+$$
+there is a $\left(\abs{V'}-c-1\right)$-sized partition of score $c(c-1)/{2}$.
+\end{lmm}
