complexity theory preliminaries

--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -43,6 +43,9 @@
 \newtheorem{rmrk}[thm]{Remark}
 
 \newcommand{\abs}[1]{\left\vert #1 \right\vert}
+%\newcommand{\np}{\textsc{NP}}
+\newcommand{\np}{\text{\textsc{NP}}}
+\newcommand{\p}{\text{\textsc{P}}}
 
 \author{Szymon Gut\\\newline\\supervisor:\\dr hab. inż. Piotr Faliszewski}
 
