--- a/imperfect.tex
+++ b/imperfect.tex
@@ -260,4 +260,4 @@ Lemma \ref{hpmd-red} proves that it is a valid reduction, i.e. it preserves the 
 So \textsc{HPMP} problem is $NP$-complete.
 \end{proof}
 
-\subsection{Something error function}
+\subsection{Inconsistent voters error function}
