--- a/imperfect.tex
+++ b/imperfect.tex
@@ -93,11 +93,19 @@ iff the answer to \textsc{X3C} is~\textsc{yes}.
 Let us try to fix a value of error function input to \textsc{OptimalDecloning} problem
 treating it as if it was hardcoded into the specification of the new problem.
 
-% good error function discussion
+Given a specific error function we will consider the following family of problems.
 
-% problem template
+\begin{problem}{Specific Error Function $f$ Optimal Decloning Template}
+	Input: Preference profile $P$ over $C$, integers $k$ and $l$.
 
-\subsection{Component error function}
+	Question: Given than $f$ is a known component error function for $P$,
+		is there a partition of $C$ into $C_1, ..., C_k$ such that $\sum_{i=1}^k f(C_i) \leq l$?
+\end{problem}
+
+We want from such an error function $f$ to capture the intuitive notion
+of distance of given partition from some decloning.
+
+\subsection{Component Error Function}
 
 % intuition for f_com
 
@@ -263,12 +271,18 @@ So \textsc{HPMP} problem is $NP$-complete.
 \end{proof}
 
 
-\subsection{Inconsistent voters error function}
+\subsection{Inconsistent Voters Error Function}
 
-Component error function has useful properties, but also could yield decloning
+Component error function has useful properties, but also could yield partition
 seemingly far from intuitively optimal.
-In the proof of theorem \ref{ultimate-theorem} we 
-% ...
+It constructs the partition using only very local information,
+such as edges in the graph of kernels of preference orders.
+For example, in the proof of theorem \ref{ultimate-theorem} we constructed a partition
+which was not in accordance with any voter.
+
+On the other side of spectrum, we may think of an error function which
+takes into consideration only global information in the sense of a single voter.
+Such an information is what we call consistency with a voter's preferences, what we define below.
 
 \begin{defn}[inconsistent voter]
 We say that a voter described by preference order~$\succ$ over $C$
@@ -287,6 +301,7 @@ $f(X)$ is a number of preference orders in $P$ that are inconsistent with $X$.
 Function $f_{iv}$ for preference profile $P$ is a clone set error function for $P$.
 \end{rmrk}
 
+Now we can introduce optimal decloning problem using $f_{iv}$ clone set error function.
 
 \begin{problem}{ConsistentVotersOptimalDecloning (CVOD)}
 	Input: Preference profile $P$ over $C$, integers $k$ and $l$.
