--- a/summary.tex
+++ b/summary.tex
@@ -1,5 +1,19 @@
 \section{Results}
 
 
+\begin{table}
+\begin{center}
+\begin{tabular}{| c | c |}\hline
+	\textbf{problem} & \textbf{complexity class} \\ \hline
+	\textsc{Decloning} & \p \\ \hline
+	\textsc{OptimalDecloning} & \np-complete \\ \hline
+	\textsc{ComponentOptimalDecloning} & \np-complete \\ \hline
+	\textsc{ConsistentVotersOptimalDecloning} & ? \\ \hline
+\end{tabular}
+\caption{Complexity classes of considered problems.}
+\end{center}
+\end{table}
+
+
 \section{Further Works}
 
