abstract and summary

--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -69,14 +69,12 @@
 
 
 \abstract{
-In elections, a subset of candidates ranked consecutively (though possibly in~different order)
-by all voters is called a clone set, and its members are called clones.
-A clone structure is a family of all clone sets of a given election.
-In~this work we study the problem of decloning, i.e. finding the clone structure of given cardinality.
-We give a polynomial-time algorithm for decloning problem.
-We also consider decloning into imperfect clone structure: we define error function measuring
-cost of turning given clone sets family into clone structure.
-Finally, we prove that optimal decloning for~sample error function is $NP$-complete.
+In this work we study computational complexity of problems related to elections.
+We are interested in problems of detecting whether
+some subsets of candidates are indistinguishable or hardly distinguishable for voters.
+We call such candidates clones and imperfect clones respectively.
+We conclude that detecting clones is in \textsc{P}
+and detecting imperfect clones is \textsc{NP}-complete for some measures.
 }
 
 \tableofcontents
