--- a/imperfect.tex
+++ b/imperfect.tex
@@ -310,4 +310,8 @@ Now we can introduce optimal decloning problem using $f_{iv}$ clone set error fu
 		is there a partition of $C$ into $C_1, ..., C_k$ such that $\sum_{i=1}^k f_{iv}(C_i) \leq l$?
 \end{problem}
 
-It remains an open problem whether \textsc{CVOD} problem is \np-hard.
+\begin{rmrk}
+\textsc{CVOD} problem is in \np.
+\end{rmrk}
+
+It remains an open problem whether \textsc{CVOD} problem is \np-complete.
